@@ -4,6 +4,7 @@ author:
   - 'Michal Spacek <skim@cpan.org>'
 build_requires:
   English: 0
+  Error::Pure::Utils: 0.22
   ExtUtils::MakeMaker: 6.36
   File::Object: 0.03
   Test::More: 0
@@ -25,7 +26,7 @@ no_index:
     - inc
     - t
 requires:
-  Error::Pure: 0.15
+  Error::Pure: 0.22
   perl: 5.6.0
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Error-Pure-Always
