@@ -11,13 +11,14 @@ author 'Michal Spacek <skim@cpan.org>';
 license 'bsd';
 name 'Error-Pure-Always';
 readme_from 'Always.pm';
-requires 'Error::Pure' => 0.15;
+requires 'Error::Pure' => 0.22;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Error-Pure-Always';
 resources 'homepage' => 'https://github.com/tupinek/Error-Pure-Always';
 resources 'repository' => 'git://github.com/tupinek/Error-Pure-Always';
 test_requires 'English' => 0;
+test_requires 'Error::Pure::Utils' => 0.22;
 test_requires 'File::Object' => 0.03;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
