@@ -1,4 +1,5 @@
 0.05
+ - Add basic tests for die rewrited to err().
  - Fix minimal version of Perl.
  - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.14 version.
